--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">md-mvp</string>
+
+    <string name="loginBg">show the login page background!</string>
+
+    <string name="loginIn">登录</string>
+    <string name="loginAccount">用户名/账号</string>
+    <string name="loginPassword">密码</string>
 </resources>
